# invene

./: .env.example  .gitignore  README.md  package-lock.json  package.json  run.sh  run_ralph.py  test.py  tsconfig.main.tsbuildinfo
backend/: .env.example  pyproject.toml  relay.db
backend/src/lightning_loop/: __init__.py  main.py
backend/src/lightning_loop/api/routes/: documents.py  graph.py  health.py  jobs.py  loop.py  pipeline.py  ralph.py  relay.py
backend/src/lightning_loop/backboard/: __init__.py  client.py  memory.py
backend/src/lightning_loop/core/: config.py
backend/src/lightning_loop/relay/: __init__.py  database.py  models.py  service.py
backend/src/lightning_loop/services/: intent.py  loop_engine.py  pipeline.py  product_pipeline.py
electron/: package-lock.json  package.json  tailwind.config.js  tsconfig.main.json  vite.config.ts
electron/src/main/: main.ts  preload.ts  ralphRunner.ts  remoteJobListener.ts
electron/src/renderer/: App.tsx  index.css  index.html  vite-env.d.ts
generate-task-graph/app/: globals.css  page.tsx
generate-task-graph/components/: bean-orchestrator.tsx  header.tsx
generate-task-graph/components/ui/: slider.tsx  textarea.tsx
ralph/: __init__.py  actuators.py  loop.py  memory.py  run_job.py  state.py
scripts/: dev.sh  setup.sh
web-orchestrator/: next.config.js  package-lock.json  package.json  tailwind.config.js
web-orchestrator/.next/: react-loadable-manifest.json  trace
web-orchestrator/.next/server/: middleware-react-loadable-manifest.js  next-font-manifest.js  next-font-manifest.json  (+2 more)
(+82 files in other folders)
